--- a/index.html
+++ b/index.html
@@ -2,36 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steven W. Tolbert</title>
-    <style>
-        body {
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 0 20px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-        }
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        h1, h2 {
-            border-bottom: 1px solid #eee;
-            padding-bottom: 10px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-    </style>
 </head>
 <body>
     <h1>Steven W. Tolbert</h1>
@@ -53,8 +24,7 @@
         <li><a href="notes.html">Physics Projects & Notes</a></li>
     </ul>
 
-    <footer>
-        <p>&copy; 2026 Steven W. Tolbert</p>
-    </footer>
+    <hr>
+    <p>2026 Steven W. Tolbert</p>
 </body>
 </html>
