Prepare site for GitHub Pages migration: rename notes.html to projects.html and fix typo

--- a/about_me.html
+++ b/about_me.html
@@ -6,26 +6,15 @@
 </head>
 <body>
     <p><a href="index.html">Back to Home</a></p>
-    <h1>About Me</h1>
-    <img src="images/pic01.png" alt="Steven W. Tolbert" width="200">
-    
-    <h3>Professional Summary</h3>
-    <p>Dedicated researcher finding key insights within data to drive business value. Career began studying quantum black holes at CERN (CMS experiment). Currently working at FPL in reliability analytics, deploying models to prevent power outages by detecting anomalous grid behavior.</p>
+    <h1>About Me</h1>    
+    <p>Independent Researcher currently working at Shell</p>
 
     <h3>Education</h3>
     <ul>
         <li>Master of Science in Artificial Intelligence, FAU (2022)</li>
         <li>Bachelor of Science in Electrical Engineering, FIU (2021)</li>
-        <li>
-            Bachelor of Science in Physics, FSU (2018)
-            <br>
-            <a href="pdf/CeD.18EB-B2FD-S5T1.200117460.05052018.Bachelor_of_Science.pdf">Physics Diploma</a>
-        </li>
-        <li>
-            Bachelor of Science in Mathematics, FSU (2018)
-            <br>
-            <a href="pdf/CeD.1856-A74E-S4T5.200117460.05052018.Bachelor_of_Science.pdf">Mathematics Diploma</a>
-        </li>
+        <li>Bachelor of Science in Physics, FSU (2018)</li>
+        <li>Bachelor of Science in Mathematics, FSU (2018)</li>
     </ul>
 
     <hr>
