--- a/index.html
+++ b/index.html
@@ -6,16 +6,12 @@
 </head>
 <body>
     <h1>Steven W. Tolbert</h1>
-    <p>Data Scientist. Dedicated to turning research into success.</p>
+    <p>Scientist</p>
     
     <nav>
         <ul>
             <li><a href="about_me.html">About Me</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="notes_ml.html">Machine Learning Notes</a></li>
-            <li><a href="notes.html">Physics Notes</a></li>
-            <li><a href="deep_learning_papers.html">Deep Learning Reconstructions</a></li>
-            <li><a href="pdf/resume.pdf">Resume (PDF)</a></li>
+            <li><a href="projects.html">Research</a></li>
         </ul>
     </nav>
 
@@ -23,7 +19,6 @@
     <ul>
         <li><a href="https://github.com/stevenwtolbert">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/steven-tolbert/">LinkedIn</a></li>
-        <li><a href="https://www.kaggle.com/stolbert">Kaggle</a></li>
         <li><a href="https://twitter.com/stevenwtolbert">Twitter</a></li>
     </ul>
 
