--- a/projects.html
+++ b/projects.html
@@ -2,53 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Projects - Steven W. Tolbert</title>
+    <title>Research - Steven W. Tolbert</title>
 </head>
 <body>
     <p><a href="index.html">Back to Home</a></p>
-    <h1>Projects</h1>
-
-    <h2>Professional Work</h2>
+    <h1>Physics</h1>
+    <h2>Research at CERN (CMS Experiment)</h2>
     <ul>
         <li>
-            <strong>Power Outage Prediction (XGBoost)</strong>
-            <p>Predicting power outages using tabular grid data to optimize resource deployment.</p>
+            <a href="https://fsu.digital.flvc.org/islandora/object/fsu%3A487174">Search for Quantum Black Hole Production</a>
+            <p>Thesis searching for microscopic black hole production in proton-proton collisions at sqrt(s) = 13 TeV.</p>
         </li>
         <li>
-            <strong>Single Phase Open Neutral Detection</strong>
-            <p>Predictive modeling using multivariate time-series data to detect difficult grid conditions.</p>
-        </li>
-        <li>
-            <strong>AI Ticket Response System</strong>
-            <p>End-to-end pipeline for monitoring tickets and assigning resources, funded by a research grant.</p>
-        </li>
-        <li>
-            <strong>Grid Trending Event Monitor</strong>
-            <p>Algorithm for tracking and identifying uptrends in grid event classes.</p>
-        </li>
-        <li>
-            <strong>Upstream Noise Filter</strong>
-            <p>Robust filter system linking multi-system data to remove noise from grid event signals.</p>
+            <a href="images/shower_shape_topology.png">Electromagnetic Shower Shape Topology Study</a>
+            <p>Examining shower topology as an alternative to isolation techniques for discerning jets and EM objects.</p>
         </li>
     </ul>
+    <h1>Computer Science</h1>
+	<li>
+            <a href="http://purl.flvc.org/fau/fd/FA00014115">
+Analysis of Driving Behaviors and Relevant Driving Preferences Regarding Self-Driving Cars</a>
+            <p>Master's Thesis on Trust in Autonomus Vehicles</p>
+        </li>
+	<li>
+	   <a href="https://openaccess.cms-conferences.org/publications/book/978-1-964867-75-5/article/978-1-964867-75-5_14"> Cross-Culutural Expectations from Self Driving Cars</a>
+	   <p>Confrence paper based on Master's Thesis</p>
+	</li>
 
-    <h2>Personal Work</h2>
-    <ul>
-        <li>
-            <strong>Threat Detection and Monitoring</strong>
-            <p>Theoretical framework using an ensemble of AI models for real-time threat detection.</p>
-        </li>
-        <li>
-            <strong>RoBERTa Q&A Sentiment Analysis</strong>
-            <p>PyTorch/TPU based system identifying phrase segments that represent predicted sentiments.</p>
-        </li>
-        <li>
-            <strong>Reddit WatchExchange Bot</strong>
-            <p>Serverless AWS/DynamoDB application for real-time keyword monitoring on Reddit.</p>
-        </li>
-    </ul>
 
-    <hr>
+
     <p>2026 Steven W. Tolbert</p>
 </body>
 </html>
